--- a/Touchstone Brother IpP/Customers.xaml
+++ b/Touchstone Brother IpP/Customers.xaml
@@ -4,6 +4,8 @@
       xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
       xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
       xmlns:local="clr-namespace:Touchstone_Brother_IpP"      
+      xmlns:ViewModels="clr-namespace:Touchstone_Brother_IpP.Models"
+      d:DataContext="{d:DesignInstance ViewModels:CustomerPageViewModel}"
       xmlns:materialDesign="http://materialdesigninxaml.net/winfx/xaml/themes"
       mc:Ignorable="d" 
       Width="1080" Height="510"
@@ -33,52 +35,52 @@
                 <ColumnDefinition Width="520"/>
                 <ColumnDefinition Width="520"/>
             </Grid.ColumnDefinitions>
-            <ListView Grid.Column="0" Margin="35 0 0 0" Width="1010" HorizontalAlignment="Left" Name="CustomerListView" SelectedItem="{Binding SelectedCustomer, Mode=TwoWay}" Height="400" ScrollViewer.VerticalScrollBarVisibility="Visible" ScrollViewer.HorizontalScrollBarVisibility="Disabled" ScrollViewer.CanContentScroll="False">
-            <ListView.ItemTemplate>
-                <DataTemplate>
-                    <StackPanel>
-                        <WrapPanel>
-                            <Grid>
-                                <WrapPanel>
-                                    <Grid>
-                                        <Grid.ColumnDefinitions>
-                                            <ColumnDefinition Width="120"/>
-                                            <ColumnDefinition Width="Auto"/>
-                                            <ColumnDefinition Width="Auto"/>
-                                        </Grid.ColumnDefinitions>
-                                        <StackPanel Grid.Column="0">
-                                            <Button x:Name="ButtonDelete" Width="100" Height="35" Margin="10 5 0 0" VerticalAlignment="Bottom" HorizontalAlignment="Left" BorderBrush="{x:Null}" Background="#ff0000" Click="DeleteCustomerButton_Click">
-                                                <StackPanel Orientation="Horizontal">
-                                                    <materialDesign:PackIcon Kind="DeleteVariant" VerticalAlignment="Center" Margin="0 2 0 0"/>
-                                                    <TextBlock Text="DELETE " VerticalAlignment="Center" Margin="2 0 0 0"/>
-                                                </StackPanel>
-                                            </Button>
-                                        </StackPanel>
-                                         <StackPanel Grid.Column="1" Margin="20">
-                                            <TextBlock Text="Name: "/>
-                                            <TextBlock Text="{Binding Name}" FontWeight="Bold"/>
-                                        </StackPanel>
-                                        <StackPanel Grid.Column="2" Margin="20">
-                                            <TextBlock>
-                                            <Run Text="Labels: "/>
-                                            <Run Text="{Binding Path=AllLabels.Count, Mode=OneWay}" FontWeight="Bold"/>
-                                            </TextBlock>
-                                        </StackPanel>
+            <ListView Grid.Column="0" Margin="35 0 0 0" Width="1010" HorizontalAlignment="Left" Name="CustomerListView" ItemsSource="{Binding CustomerListViewSource}" SelectedItem="{Binding SelectedCustomer, Mode=TwoWay}" Height="400" ScrollViewer.VerticalScrollBarVisibility="Visible" ScrollViewer.HorizontalScrollBarVisibility="Disabled" ScrollViewer.CanContentScroll="False">
+                <ListView.ItemTemplate>
+                    <DataTemplate>
+                        <StackPanel>
+                            <WrapPanel>
+                                <Grid>
+                                    <WrapPanel>
+                                        <Grid>
+                                            <Grid.ColumnDefinitions>
+                                                <ColumnDefinition Width="120"/>
+                                                <ColumnDefinition Width="Auto"/>
+                                                <ColumnDefinition Width="Auto"/>
+                                            </Grid.ColumnDefinitions>
+                                            <StackPanel Grid.Column="0">
+                                                <Button x:Name="ButtonDelete" Width="100" Height="35" Margin="10 5 0 0" VerticalAlignment="Bottom" HorizontalAlignment="Left" BorderBrush="{x:Null}" Background="#ff0000" Click="DeleteCustomerButton_Click">
+                                                    <StackPanel Orientation="Horizontal">
+                                                        <materialDesign:PackIcon Kind="DeleteVariant" VerticalAlignment="Center" Margin="0 2 0 0"/>
+                                                        <TextBlock Text="DELETE " VerticalAlignment="Center" Margin="2 0 0 0"/>
+                                                    </StackPanel>
+                                                </Button>
+                                            </StackPanel>
+                                             <StackPanel Grid.Column="1" Margin="20">
+                                                <TextBlock Text="Name: "/>
+                                                <TextBlock Text="{Binding Name}" FontWeight="Bold"/>
+                                            </StackPanel>
+                                            <StackPanel Grid.Column="2" Margin="20">
+                                                <TextBlock>
+                                                <Run Text="Labels: "/>
+                                                <Run Text="{Binding Path=AllLabels.Count, Mode=OneWay}" FontWeight="Bold"/>
+                                                </TextBlock>
+                                            </StackPanel>
 
-                                    </Grid>
-                                </WrapPanel>
-                            </Grid>
-                        </WrapPanel>
-                        <Separator Foreground="Black" Width="1010" Opacity="0.5"/>
-                    </StackPanel>
-                </DataTemplate>
-            </ListView.ItemTemplate>
+                                        </Grid>
+                                    </WrapPanel>
+                                </Grid>
+                            </WrapPanel>
+                            <Separator Foreground="Black" Width="1010" Opacity="0.5"/>
+                        </StackPanel>
+                    </DataTemplate>
+                </ListView.ItemTemplate>
                 <ListView.ItemContainerStyle>
                     <Style TargetType="ListViewItem">
                         <EventSetter Event="PreviewMouseLeftButtonUp" Handler="CustomerListView_PreviewMouseLeftButtonUp"/>
                     </Style>
                 </ListView.ItemContainerStyle>
-        </ListView>
+            </ListView>
             <DockPanel Grid.Column="1" Background="#5D5D5D">
                 <Grid>
                     <Grid.ColumnDefinitions>
@@ -101,7 +103,7 @@
                                     <Setter Property="Foreground" Value="White"/>
                                 </Style>
                             </StackPanel.Resources>
-                            <ListView x:Name="ViewLabelsList" HorizontalAlignment="Left" Width="500"  Height="70" ScrollViewer.CanContentScroll="False" ScrollViewer.HorizontalScrollBarVisibility="Visible" ScrollViewer.VerticalScrollBarVisibility="Hidden">
+                            <ListView x:Name="ViewLabelsList" ItemsSource="{Binding ViewLabelListSource}" HorizontalAlignment="Left" Width="500"  Height="70" ScrollViewer.CanContentScroll="False" ScrollViewer.HorizontalScrollBarVisibility="Visible" ScrollViewer.VerticalScrollBarVisibility="Hidden">
                                 <ListView.ItemsPanel>
                                     <ItemsPanelTemplate>
                                         <StackPanel Orientation="Horizontal" Margin="-5"/>
@@ -131,29 +133,29 @@
                                     <Grid Margin="20 0 0 0">
                                         <StackPanel Orientation="Horizontal">
                                             <TextBlock Text="Delivery Date:" FontWeight="Bold"/>
-                                            <TextBlock x:Name="ViewDeliveryDate" Text="--/--/----" Margin="10 0 0 0"/>
+                                            <TextBlock x:Name="ViewDeliveryDate" Text="{Binding ViewSelectedLabelSource.DeliveryDate}" Margin="10 0 0 0"/>
                                         </StackPanel>
                                     </Grid>
                                     <Grid Margin="20 10 0 0">
                                         <StackPanel Orientation="Horizontal">
                                             <TextBlock Text="Name:" FontWeight="Bold"/>
-                                            <TextBlock x:Name="ViewName" Text="Customer Name" Margin="10 0 0 0"/>
+                                            <TextBlock x:Name="ViewName" Text="{Binding ViewSelectedLabelSource.Name}" Margin="10 0 0 0"/>
                                         </StackPanel>
                                     </Grid>
                                     <Grid Margin="20 10 0 0" Height="Auto" Width="180" HorizontalAlignment="Left">
                                         <TextBlock Text="Address:" FontWeight="Bold"/>
-                                        <TextBlock x:Name="ViewAddress" Margin="60 0 0 0" Text="Address line 1, Address Line 2, Address Line 3" TextWrapping="WrapWithOverflow"/>
+                                        <TextBlock x:Name="ViewAddress" Margin="60 0 0 0" Text="{Binding ViewSelectedLabelSource.Address}" TextWrapping="WrapWithOverflow"/>
                                     </Grid>
                                     <Grid Margin="20 10 0 0">
                                         <StackPanel Orientation="Horizontal">
                                             <TextBlock Text="Postcode" FontWeight="Bold"/>
-                                            <TextBlock x:Name="ViewPostcode" Text="Char25" Margin="10 0 0 0"/>
+                                            <TextBlock x:Name="ViewPostcode" Text="{Binding ViewSelectedLabelSource.PostCode}" Margin="10 0 0 0"/>
                                         </StackPanel>
                                     </Grid>
                                     <Grid Margin="20 10 0 0">
                                         <StackPanel Orientation="Horizontal">
                                             <TextBlock Text="Telephone" FontWeight="Bold"/>
-                                            <TextBlock x:Name="ViewTelephone" Text="Char25" Margin="10 0 0 0"/>
+                                            <TextBlock x:Name="ViewTelephone" Text="{Binding ViewSelectedLabelSource.Telephone}" Margin="10 0 0 0"/>
                                         </StackPanel>
                                     </Grid>
                                     <Grid Margin="20 10 0 0">
@@ -162,7 +164,7 @@
                                     </Grid>
                                     <Grid>
                                         <Button Width="150" Height="150" Background="White" BorderBrush="Gray" Click="ViewQRButton_Click">
-                                            <Image x:Name="ViewQRCode" Width="145" Height="145" HorizontalAlignment="Center" VerticalAlignment="Center"/>
+                                            <Image x:Name="ViewQRCode" Width="145" Height="145" HorizontalAlignment="Center" VerticalAlignment="Center" Source="{Binding ViewQRCodeSource}"/>
                                         </Button>
                                     </Grid>
                                 </StackPanel>
@@ -170,43 +172,43 @@
                                     <Grid Margin="20 10 0 0">
                                         <StackPanel Orientation="Horizontal">
                                             <TextBlock Text="Consignment Number:" FontWeight="Bold"/>
-                                            <TextBlock x:Name="ViewConsignmentNumber" Text="Char100" Margin="10 0 0 0"/>
+                                            <TextBlock x:Name="ViewConsignmentNumber" Text="{Binding ViewSelectedLabelSource.ConsignmentNumber}" Margin="10 0 0 0"/>
                                         </StackPanel>
                                     </Grid>
                                     <Grid Margin="20 10 0 0">
                                         <StackPanel Orientation="Horizontal">
                                             <TextBlock Text="Barcode:" FontWeight="Bold"/>
-                                            <TextBlock x:Name="ViewBarcode" Text="Char100" Margin="10 0 0 0"/>
+                                            <TextBlock x:Name="ViewBarcode" Text="{Binding ViewSelectedLabelSource.Barcode}" Margin="10 0 0 0"/>
                                         </StackPanel>
                                     </Grid>
                                     <Grid Margin="20 10 0 0">
                                         <StackPanel Orientation="Horizontal">
                                             <TextBlock Text="Location:" FontWeight="Bold"/>
-                                            <TextBlock x:Name="ViewLocation" Text="Location Name" Margin="10 0 0 0"/>
+                                            <TextBlock x:Name="ViewLocation" Text="{Binding ViewSelectedLabelSource.Location}" Margin="10 0 0 0"/>
                                         </StackPanel>
                                     </Grid>
                                     <Grid Margin="20 10 0 0">
                                         <StackPanel Orientation="Horizontal">
                                             <TextBlock Text="Location Number:" FontWeight="Bold"/>
-                                            <TextBlock x:Name="ViewLocationNumber" Text="int" Margin="10 0 0 0"/>
+                                            <TextBlock x:Name="ViewLocationNumber" Text="{Binding ViewSelectedLabelSource.LocationNumber}" Margin="10 0 0 0"/>
                                         </StackPanel>
                                     </Grid>
                                     <Grid Margin="20 10 0 0">
                                         <StackPanel Orientation="Horizontal">
                                             <TextBlock Text="Parcel Number:" FontWeight="Bold"/>
-                                            <TextBlock x:Name="ViewParcelNumber" Text="int" Margin="10 0 0 0"/>
+                                            <TextBlock x:Name="ViewParcelNumber" Text="{Binding ViewSelectedLabelSource.ParcelNumber}" Margin="10 0 0 0"/>
                                         </StackPanel>
                                     </Grid>
                                     <Grid Margin="20 10 0 0">
                                         <StackPanel Orientation="Horizontal">
                                             <TextBlock Text="Parcel Size:" FontWeight="Bold"/>
-                                            <TextBlock x:Name="ViewParcelSize" Text="Char25" Margin="10 0 0 0"/>
+                                            <TextBlock x:Name="ViewParcelSize" Text="{Binding ViewSelectedLabelSource.ParcelSize}" Margin="10 0 0 0"/>
                                         </StackPanel>
                                     </Grid>
                                     <Grid Margin="20 10 0 0">
                                         <StackPanel Orientation="Horizontal">
                                             <TextBlock Text="Weight:" FontWeight="Bold"/>
-                                            <TextBlock x:Name="ViewWeight" Text="Char100" Margin="10 0 0 0"/>
+                                            <TextBlock x:Name="ViewWeight" Text="{Binding ViewSelectedLabelSource.Weight}" Margin="10 0 0 0"/>
                                         </StackPanel>
                                     </Grid>
                                 </StackPanel>
